Working on getting regression tests running
git-svn-id: https://fluid.surelogic.com/svn/eng/trunk/jsure-tests@16904 d02ae147-ee12-4a35-9452-91c89e8b2592